# fuzzytrackmatch

./: .gitignore  README.md  pyproject.toml
examples/: basic_discogs_search.py  basic_lastfm_search.py
src/fuzzytrackmatch/: __init__.py  artist_normalize.py  base_genre_search.py  discogs_api.py  discogs_models.py  discogs_search.py  genre-aliases.yaml  genre_whitelist.py  genres-tree.yaml  lastfm_search.py  song_normalize.py
tests/: test_artist_normalize.py  test_genre_whitelist.py  test_whitelist_uniqueness.py
