[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzytrackmatch"
version = "0.1.0"
dependencies = ["pylast", "pyyaml", "requests>=2.31"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fuzzytrackmatch = ["genres-tree.yaml"]